[project]
name = "sdweb-raven-pnginfo"
version = "0.1.0"
description = "Raven PNG info integration for Stable Diffusion WebUI"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
